--- a/src/App.css
+++ b/src/App.css
@@ -248,3 +248,65 @@ header .head_btn_right {
   background-color: #fd565f;
   color: #fff;
 }
+
+/* Diary */
+.DiaryPage {
+}
+
+.DiaryPage section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.DiaryPage h4 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.DiaryPage .diary_img_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #ececec;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+}
+.DiaryPage .diary_img_wrapper_1 {
+  background-color: #64c964;
+}
+.DiaryPage .diary_img_wrapper_2 {
+  background-color: #9dd772;
+}
+.DiaryPage .diary_img_wrapper_3 {
+  background-color: #fdce17;
+}
+.DiaryPage .diary_img_wrapper_4 {
+  background-color: #fd8446;
+}
+.DiaryPage .diary_img_wrapper_5 {
+  background-color: #fd565f;
+}
+
+.DiaryPage .emotion_descript {
+  font-size: 22px;
+}
+
+.DiaryPage .diary_content_wrapper {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 5px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+.DiaryPage .diary_content_wrapper p {
+  padding: 20px;
+  text-align: left;
+  font-size: 20px;
+  line-height: 2.5;
+}
